--- a/src/platforms/hosted/Makefile.inc
+++ b/src/platforms/hosted/Makefile.inc
@@ -8,9 +8,10 @@ CFLAGS +=-I ./target
 # Architecture enables
 ENABLE_CORTEXAR := 1
 ENABLE_RISCV := 1
-# Target enables
+# Target family enables
 ENABLE_CH579 := 1
 ENABLE_PUYA := 1
+ENABLE_TI_SITARA := 1
 ENABLE_XILINX := 1
 
 # Clang requires some special handling here: -gnu means MinGW
