dockerfile added, bluepill cross-file modded

--- a/cross-file/bluepill.ini
+++ b/cross-file/bluepill.ini
@@ -19,6 +19,7 @@ endian = 'little'
 
 [project options]
 probe = 'bluepill'
-targets = 'cortexm,efm,hc32,lpc,nrf,nxp,renesas,rp,sam,stm,ti'
+; targets = 'cortexm,efm,hc32,lpc,nrf,nxp,renesas,rp,sam,stm,ti'
+targets = 'cortexm,efm,hc32,lpc,nrf,nxp,renesas,rp,sam,stm'
 rtt_support = false
 bmd_bootloader = true
