--- a/cross-file/stlink.ini
+++ b/cross-file/stlink.ini
@@ -19,7 +19,8 @@ endian = 'little'
 
 [project options]
 probe = 'stlink'
-targets = 'cortexm,hc32,lpc,nrf,nxp,renesas,rp,sam,stm,ti'
+; targets = 'cortexm,hc32,lpc,nrf,nxp,renesas,rp,sam,stm,ti'
+targets = 'cortexm,hc32,lpc,nrf,nxp,renesas,rp,sam,stm'
 rtt_support = false
 stlink_swim_nrst_as_uart = false
 bmd_bootloader = false
