stlink cross-file modded

--- a/cross-file/stlink.ini
+++ b/cross-file/stlink.ini
@@ -20,7 +20,7 @@ endian = 'little'
 [project options]
 probe = 'stlink'
 ; targets = 'cortexm,hc32,lpc,nrf,nxp,renesas,rp,sam,stm,ti'
-targets = 'cortexm,hc32,lpc,nrf,nxp,renesas,rp,sam,stm'
+targets = 'cortexm,hc32,lpc,nrf,nxp,renesas,rp,stm'
 rtt_support = false
 stlink_swim_nrst_as_uart = false
 bmd_bootloader = false
