--- a/cross-file/native.ini
+++ b/cross-file/native.ini
@@ -20,6 +20,6 @@ endian = 'little'
 [project options]
 probe = 'native'
 ; targets = 'cortexm,efm,hc32,lpc,nrf,nxp,renesas,rp,sam,stm,ti'
-targets = 'cortexm,efm,hc32,lpc,nrf,nxp,renesas,rp,sam,stm'
+targets = 'cortexm,efm,hc32,lpc,nrf,nxp,renesas,rp,stm'
 rtt_support = false
 bmd_bootloader = true
