--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -44,20 +44,20 @@ run meson setup build-bluepill --cross-file ./cross-file/bluepill.ini
 run meson compile -C build-bluepill
 # run meson setup build-ctxlink --cross-file ./cross-file/ctxlink.ini
 # run meson compile -C build-ctxlink
-# run meson setup build-f072 --cross-file ./cross-file/f072.ini
-# run meson compile -C build-f072
+run meson setup build-f072 --cross-file ./cross-file/f072.ini
+run meson compile -C build-f072
 # run meson setup build-f3 --cross-file ./cross-file/f3.ini
 # run meson compile -C build-f3
+# run ls
+# run git pull
 # run meson setup build-f4discovery --cross-file ./cross-file/f4discovery.ini
 # run meson compile -C build-f4discovery
 # run meson setup build-hydrabus --cross-file ./cross-file/hydrabus.ini
 # run meson compile -C build-hydrabus
 # run meson setup build-launchpad-icdi --cross-file ./cross-file/launchpad-icdi.ini
 # run meson compile -C build-launchpad-icdi
-run pwd
-run git pull
-run meson setup build-native --cross-file ./cross-file/native.ini
-run meson compile -C build-native
+# run meson setup build-native --cross-file ./cross-file/native.ini
+# run meson compile -C build-native
 # run meson setup build-stlink --cross-file ./cross-file/stlink.ini
 # run meson compile -C build-stlink
 # run meson setup build-stlinkv3 --cross-file ./cross-file/stlinkv3.ini
