--- a/cross-file/f072.ini
+++ b/cross-file/f072.ini
@@ -20,6 +20,6 @@ endian = 'little'
 [project options]
 probe = 'f072'
 ; targets = 'cortexm,riscv32,riscv64,efm,hc32,lpc,nrf,nxp,renesas,rp,sam,stm,ti'
-targets = 'cortexm,riscv32,riscv64,efm,hc32,lpc,nrf,nxp,renesas,rp,sam,stm'
+targets = 'cortexm,riscv32,riscv64,efm,hc32,lpc,nrf,nxp,renesas,rp,stm'
 rtt_support = false
 bmd_bootloader = false
